samples/_failures_safe/1761430665_2c9958_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f5648674.c: In function ‘main’:
./samples/SAFE/__tmp_f5648674.c:156:9: error: expected declaration or statement at end of input
  156 |         if (src < 0 || src >= graph.num_nodes || dest < 0 || dest >= graph.num_nodes) {
      |         ^~
./samples/SAFE/__tmp_f5648674.c:156:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f5648674.c:156:9: error: expected declaration or statement at end of input
